# OZ_PROJ

./: .gitignore
Database/DB_DAY01/: chapter01_06.ipynb
Database/DB_DAY02/: chapter07_13.ipynb  database_day02_project.sql
Database/DB_DAY03/: Learn SQL - hopital.db 문제 풀기_EASY.rtf  data_generate.py  database_day03.sql  database_day03_CH1420_CREATE.sql  database_day03_CH1420_DELETE.sql  database_day03_CH1420_SELECT.sql  database_day03_CH1420_UPDATE.sql
Database/DB_DAY04/: Learn SQL - northwind.db_easy.rtf  Learn SQL - northwind.db_medium.rtf  mysqlsampledatabase.mwb  test_pymysql.py
Django/Dj_DAY03/: .python-version  pyproject.toml
Django/Dj_DAY03/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
Django/Dj_DAY03/config/: settings.py  urls.py
Django/Dj_DAY03/member/: views.py
Django/Dj_DAY03/templates/: base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  pagination.html  test_get.html  test_post.html
Django/Dj_DAY03/templates/registration/: login.html  signup.html
Django/Dj_DAY03/utils/: models.py
Django/rest-blog/: pyproject.toml
Django/rest-blog/blog/: admin.py  models.py  serializers.py  urls.py
Django/rest-blog/blog/tests/: __init__.py  model_test.py  view_test.py
Django/rest-blog/blog/urls/: api_urls.py  generics_urls.py  views_set_urls.py
Django/rest-blog/blog/views/: __init__.py  api_view_set_views.py  api_views.py  generics_views.py  views.py
Django/rest-blog/config/: urls.py
Django/rest-blog/utils/: permissions.py
Python/: cote.py
(+296 files in other folders)
